# VulkanLearning

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  vcpkg.json
Config/: qt.conf
Modules/Application/: CMakeLists.txt
Modules/Application/Modules/Private/: Main.cpp
Modules/Application/Source/: Main.cpp
Modules/RenderCore/: CMakeLists.txt
Modules/RenderCore/Include/RenderCore/: RenderCoreModule.h  VulkanRender.h  Window.h
Modules/RenderCore/Modules/Private/: EngineCore.cppm  EngineCore.ixx  EngineCore.mxx  RenderCoreModule.h  VulkanRenderCore.ixx  VulkanRenderCore.mxx  Window.cppm  Window.mxx
Modules/RenderCore/Modules/Public/: EngineCore.ixx  Window.ixx
Modules/RenderCore/QML/: Placeholder.qml
Modules/RenderCore/Shaders/: Triangle.frag  Triangle.frag.spv  Triangle.vert  Triangle.vert.spv
Modules/RenderCore/Source/: RenderCoreHelpers.h  VulkanBufferManager.cpp  VulkanBufferManager.h  VulkanCommands.cpp  VulkanCommands.h  VulkanCommandsManager.cpp  VulkanCommandsManager.h  VulkanConfigurator.cpp  VulkanConfigurator.h  VulkanConstants.h  VulkanDebugHelpers.h  VulkanDeviceManager.cpp  VulkanDeviceManager.h  VulkanEnumConverter.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanPipelineManager.cpp  VulkanPipelineManager.h  VulkanRender.cpp  VulkanRender.h  VulkanRenderCore.cpp  VulkanRenderCore.h  VulkanShaderCompiler.cpp  VulkanShaderCompiler.h  Window.cpp
Modules/RenderCore/Source/Managers/: VulkanBufferManager.cpp  VulkanBufferManager.h  VulkanCommandsManager.cpp  VulkanCommandsManager.h  VulkanDeviceManager.cpp  VulkanDeviceManager.h  VulkanPipelineManager.cpp  VulkanPipelineManager.h  VulkanRenderSubsystem.cpp  VulkanRenderSubsystem.h  VulkanShaderManager.cpp  VulkanShaderManager.h
Modules/RenderCore/Source/Types/: ApplicationEventFlags.h  BufferRecordParameters.h  DeviceProperties.h  ObjectData.h  QueueType.h  RenderStateFlags.h  TextureData.h  VulkanVertex.h
Modules/RenderCore/Source/Utils/: EnumHelpers.h  GLFWCallbacks.h  RenderCoreHelpers.cpp  RenderCoreHelpers.h  VulkanConstants.h  VulkanDebugHelpers.cpp  VulkanDebugHelpers.h  VulkanEnumConverter.h
Modules/Tests/Benchmark/: CMakeLists.txt
Modules/Tests/Benchmark/Source/: Benchmark.cpp
Modules/Tests/SharedUtils/: CMakeLists.txt
Modules/Tests/Unit/: CMakeLists.txt
Modules/Tests/Unit/Source/: Unit.cpp
RadeonManager/: CMakeLists.txt
RadeonManager/Modules/Private/: Manager.cppm  Profiler.cppm
RadeonManager/Modules/Public/: Manager.ixx  Profiler.ixx
RadeonManager/Source/Private/: Manager.cxx  Profiler.cxx  RadeonManagerModule.hpp
RadeonManager/Source/Public/: Manager.ixx  Profiler.ixx
RenderCore/: CMakeLists.txt
RenderCore/Modules/Private/Buffer/: AllocationRegister.cppm  AllocationTypes.cppm  AllocationTypes.ixx  BufferManager.cppm
RenderCore/Modules/Private/Command/: CommandsManagement.cppm
RenderCore/Modules/Private/Device/: DeviceManagement.cppm  DeviceManagement.ixx
RenderCore/Modules/Private/Input/: GLFWCallbacks.cppm
RenderCore/Modules/Private/Overlay/: ImGuiManagement.cppm  ImGuiManagement.ixx
RenderCore/Modules/Private/Pipeline/: PipelineManager.cppm  PipelineManager.ixx
RenderCore/Modules/Private/Rendering/: Renderer.cppm
RenderCore/Modules/Private/Scene/: Camera.cppm  Object.cppm
RenderCore/Modules/Private/Shader/: ShaderManagement.cppm  ShaderManagement.ixx
RenderCore/Modules/Private/Subsystem/: RenderingSubsystem.cppm
RenderCore/Modules/Private/Windowing/: Control.cppm  GLFWHandler.cppm  Window.cppm
RenderCore/Modules/Public/Buffer/: AllocationRegister.ixx  AllocationTypes.ixx  BufferManager.ixx  MeshBufferData.ixx  TextureBufferData.ixx  TextureType.ixx  UniformBufferObject.ixx
RenderCore/Modules/Public/Command/: CommandsManagement.ixx
RenderCore/Modules/Public/Device/: DeviceManagement.ixx  SurfaceProperties.ixx
RenderCore/Modules/Public/Input/: GLFWCallbacks.ixx
RenderCore/Modules/Public/Overlay/: ImGuiManagement.ixx
RenderCore/Modules/Public/Pipeline/: PipelineManager.ixx
RenderCore/Modules/Public/Rendering/: EngineStateFlags.ixx  Renderer.ixx
RenderCore/Modules/Public/Scene/: Camera.ixx  Object.ixx  Transform.ixx  Vertex.ixx
RenderCore/Modules/Public/Shader/: ShaderManagement.ixx
RenderCore/Modules/Public/Subsystem/: RenderingSubsystem.ixx
RenderCore/Modules/Public/Windowing/: Control.ixx  GLFWHandler.ixx  Window.ixx  WindowFlags.ixx
RenderCore/Resources/Shaders/: DEFAULT_SHADER.frag  DEFAULT_SHADER.task  DEFAULT_SHADER.vert  DEFAULT_VERTEX_SHADER.vert  TRIANGLE_FRAG_SHADER.frag  TRIANGLE_VERT_SHADER.vert
RenderCore/Source/Private/: RenderCoreModule.hpp
RenderCore/Source/Private/Buffer/: AllocationRegister.cxx  AllocationTypes.cxx  BufferManager.cxx
RenderCore/Source/Private/Command/: CommandsManagement.cxx
RenderCore/Source/Private/Device/: DeviceManagement.cxx
RenderCore/Source/Private/Input/: GLFWCallbacks.cxx
RenderCore/Source/Private/Integrations/: GLFWCallbacks.cxx  GLFWHandler.cxx  ImGuiGLFWBackend.cxx  ImGuiOverlay.cxx  ImGuiVulkanBackend.cxx  Viewport.cxx
RenderCore/Source/Private/Overlay/: ImGuiManagement.cxx
RenderCore/Source/Private/Pipeline/: PipelineManager.cxx
RenderCore/Source/Private/Rendering/: Renderer.cxx
RenderCore/Source/Private/Scene/: Camera.cxx  Illumination.cxx  Object.cxx
RenderCore/Source/Public/: PCH.hpp  RenderCoreDefinitions.hpp  RenderCoreModule.hpp
RenderCore/Source/Shaders/: ComputeShader.glsl  DEFAULT_SHADER.frag  DEFAULT_SHADER.mesh  DEFAULT_SHADER.vert  FragmentShader.glsl  MeshShader.glsl  TaskShader.glsl  Types.h
RenderGraphRPS/: CMakeLists.txt
RenderGraphRPS/Source/Private/: Manager.cxx  Profiler.cxx  RenderGraphRPSModule.hpp
RenderGraphRPS/Source/Public/: Manager.ixx  Utils.ixx
Source/: CMakeLists.txt
Source/Application/: CMakeLists.txt
Source/CMake/: Utils.cmake
Source/RenderCore/: CMakeLists.txt
Source/Tests/Benchmark/: CMakeLists.txt
Source/Tests/Unit/: CMakeLists.txt
Tests/: CMakeLists.txt
Tests/Benchmark/: CMakeLists.txt
Tests/SharedUtils/: CMakeLists.txt
Tests/Unit/: CMakeLists.txt
(+303 files in other folders)
