# Author: Lucas Vilas-Boas
# Year: 2024
# Repo: https://github.com/lucoiso/vulkan-renderer

# ----------- Global Definitions -----------
CMAKE_MINIMUM_REQUIRED(VERSION 3.29)
PROJECT(vulkan-renderer VERSION 0.0.1 LANGUAGES CXX)

IF (POLICY CMP0048)
    CMAKE_POLICY(SET CMP0048 NEW)
ENDIF ()

SET(CMAKE_CXX_STANDARD 23)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)
SET(CMAKE_CXX_SCAN_FOR_MODULES ON)

ADD_DEFINITIONS(-DVK_NO_PROTOTYPES)
ADD_DEFINITIONS(-DVMA_DYNAMIC_VULKAN_FUNCTIONS)

IF (UNIX)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fmodules-ts")
ENDIF (UNIX)

SET(Boost_NO_WARN_NEW_VERSIONS ON)
IF (WIN32)
    ADD_DEFINITIONS(-DBOOST_USE_WINAPI_VERSION=0x0A00)
    ADD_DEFINITIONS(-D_WIN32_WINNT=0x0A00)
ENDIF (WIN32)

# -------------- Directories ---------------
ADD_SUBDIRECTORY(RenderCore)
ADD_SUBDIRECTORY(Submodules)
